--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "multiselect-react-dropdown": "^2.0.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.12",
     "react-loader-spinner": "^6.0.0-0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.5.1",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-flatpickr": "^3.8.6"
   }
 }
